Se adicionó un titulo

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
         <center>
             <strong><h1>DEMO GIT</h1></strong>
         </center>
+        <h2>Mensaje del segundo commit</h2>
     </body>
 </html>
