Se adicionó otro titulo

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
             <strong><h1>DEMO GIT</h1></strong>
         </center>
         <h2>Mensaje del segundo commit</h2>
+        <h2>Mensaje del tercer commit</h2>
     </body>
 </html>
