Se adicionó otro nuevo titulo

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         </center>
         <h2>Mensaje del segundo commit</h2>
         <h2>Mensaje del tercer commit</h2>
+        <h2>Mensaje del cuarto commit</h2>
     </body>
 </html>
