Se adicionó sexto titulo

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <h2>Mensaje del tercer commit</h2>
         <h2>Mensaje del cuarto commit</h2>
         <h2>Mensaje del quinto commit</h2>
+        <h2>Mensaje del sexto commit</h2>
     </body>
 </html>
