--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         <h2>Mensaje del cuarto commit</h2>
         <h2>Mensaje del quinto commit</h2>
         <h2>Mensaje del sexto commit</h2>
+        <h2>Mensaje del septimo commit</h2>
     </body>
 </html>
